--- a/README
+++ b/README
@@ -1,1 +1,4 @@
-This is a project setup for my brother. Silverlight will be used
+This is a project setup for my elder brother. Silverlight will be used. This is beacause my brother's information is stored in excel. With C#, I can handle excel easily.
+
+Kiwi
+2012.1.12
